--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>login</servlet-name>
         <servlet-class>servlets.login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>signup</servlet-name>
+        <servlet-class>servlets.signup</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>logout</servlet-name>
         <url-pattern>/logout.do</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>signup</servlet-name>
+        <url-pattern>/signup.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
