--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>logout</servlet-name>
-        <servlet-class>servlets.logout</servlet-class>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>servlets.Logout</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>login</servlet-name>
-        <servlet-class>servlets.login</servlet-class>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>servlets.Login</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>signup</servlet-name>
-        <servlet-class>servlets.signup</servlet-class>
+        <servlet-name>Signup</servlet-name>
+        <servlet-class>servlets.Signup</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>logout</servlet-name>
+        <servlet-name>Logout</servlet-name>
         <url-pattern>/logout.do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>login</servlet-name>
+        <servlet-name>Login</servlet-name>
         <url-pattern>/login.do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>signup</servlet-name>
+        <servlet-name>Signup</servlet-name>
         <url-pattern>/signup.do</url-pattern>
     </servlet-mapping>
     <session-config>
