--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -6,15 +6,15 @@
     </context-param>
     <servlet>
         <servlet-name>Logout</servlet-name>
-        <servlet-class>servlets.Logout</servlet-class>
+        <servlet-class>servlets.user.Logout</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Login</servlet-name>
-        <servlet-class>servlets.Login</servlet-class>
+        <servlet-class>servlets.user.Login</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Signup</servlet-name>
-        <servlet-class>servlets.Signup</servlet-class>
+        <servlet-class>servlets.user.Signup</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ViewPayments</servlet-name>
