--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -62,11 +62,11 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
-        <url-pattern>/login.do</url-pattern>
+        <url-pattern>/Login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Signup</servlet-name>
-        <url-pattern>/signup.do</url-pattern>
+        <url-pattern>/Signup</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AdminViewPayments</servlet-name>
