--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -4,6 +4,14 @@
         <param-name>databaseName</param-name>
         <param-value>XYZ_Assoc</param-value>
     </context-param>
+    <filter>
+        <filter-name>AdminFilter</filter-name>
+        <filter-class>filters.AdminFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AdminFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>Logout</servlet-name>
         <servlet-class>servlets.user.Logout</servlet-class>
