Added web service for approval/suspension of members, implemented the servlet to approve and suspend members, updated the JSP to allow approval/suspension of members.

--- a/ESDProject/web/WEB-INF/web.xml
+++ b/ESDProject/web/WEB-INF/web.xml
@@ -144,6 +144,10 @@
         <servlet-name>ProcessClaim</servlet-name>
         <url-pattern>/admin/process-claim.do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcessMember</servlet-name>
+        <url-pattern>/admin/process-member.do</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
